--- a/server/package.json
+++ b/server/package.json
@@ -16,11 +16,16 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "morgan": "^1.10.1"
+    "inversify": "^7.10.2",
+    "mongoose": "^8.18.3",
+    "morgan": "^1.10.1",
+    "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^24.6.1",
+    "@types/reflect-metadata": "^0.0.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   }
